# marlin-ui

./: .gitignore  CMakeLists.txt  README.md  SourceLineItem.h  SourceLineItem.m  SourceLineItem.xib
cmake/: catch2.cmake  marlin.cmake
mac/: CMakeLists.txt  Document.h  Document.mm  Info.plist  NSObject+Casting.h  NSObject+Casting.mm  SourceLineItem.h  SourceLineItem.mm  SourceLineItem.xib  SourceTextView.h  SourceTextView.mm  SourceTheme.h  SourceTheme.mm  SourceViewController.h  SourceViewController.mm  ViewController.mm
mac/Base.lproj/: Main.storyboard
src/: CMakeLists.txt  document.hpp  source.hpp
test/: CMakeLists.txt  source_tests.cpp
